feat: jib 붙이기